--- a/GiantappConfiger/GiantappConfiger.csproj
+++ b/GiantappConfiger/GiantappConfiger.csproj
@@ -6,20 +6,11 @@
     <AssemblyName>GiantappConfiger</AssemblyName>
     <RootNamespace>GiantappConfiger</RootNamespace>
     <Version>1.0.1</Version>
-    <PackageId>GiantappConfiger.WPF</PackageId>
+    <PackageId>GiantappConfiger</PackageId>
     <Authors>DaZiYuan</Authors>
     <Product>巨应工作室 | GiantApp Studio</Product>
     <Description>mscoder.cn</Description>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>..\Output\</OutputPath>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\Output\</OutputPath>
-  </PropertyGroup>
-
+  </PropertyGroup> 
   <ItemGroup>
     <PackageReference Include="MultiLanguageForXAML" Version="2.0.2.5" />
   </ItemGroup>
