--- a/GiantappConfiger/GiantappConfiger.csproj
+++ b/GiantappConfiger/GiantappConfiger.csproj
@@ -13,5 +13,8 @@
   </PropertyGroup> 
   <ItemGroup>
     <PackageReference Include="MultiLanguageForXAML" Version="2.0.2.5" />
+  </ItemGroup> 
+  <ItemGroup>
+    <Folder Include="Views\" />
   </ItemGroup>
 </Project>
